src/snapshots/afrotd__parser__tests__rule_2.12.6.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 12
  - 6
title: Meterlinie
text: "Eine Meterlinie (Yardline) ist jede Linie des Spielfeldes, die parallel zu den Endlinien liegt. Die eigenen Meterlinien jedes Teams, ob markiert oder unmarkiert, sind von der eigenen Endzone bis zur 50-Meterlinie durchgehend nummeriert."
interpretations: []
