src/snapshots/afrotd__parser__tests__rule_2.12.8.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 12
  - 8
title: Neunmetermarkierungen
text: "30 cm lange Neunmetermarkierungen sollen sich an jeder 10-Meterlinie 9 m von der Seitenlinie entfernt befinden. Sie sind nicht erforderlich, wenn das Spielfeld gemäß Regel 1.2.1.h markiert wurde."
interpretations: []
