src/snapshots/afrotd__parser__tests__rule_2.13.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 13
  - 1
title: Ballübergabe
text: "\ta) Übergabe des Balles bedeutet die Übertragung des Ballbesitzes von einem Mitspieler zum anderen, ohne den Ball zu passen, zu fumbeln oder zu kicken.\n\tb) Außer wenn es die Regeln erlauben, ist die Vorwärtsübergabe des Balles zu einem Mitspieler unzulässig.\n\tc) Der Verlust des Spieler Ballbesitzes bei der erfolglosen Durchführung der Ballübergabe ist ein Fumble durch den Spieler, der zuletzt in Ballbesitz war (Ausnahme: der Snap (Regel 2.23.1.c)).\n\td) Eine Ballübergabe nach hinten ist dann gegeben, wenn der Ballträger den Ball loslässt, bevor dieser sich jenseits der Meterlinie befindet, an der sich der Ballträger befindet."
interpretations: []
