src/snapshots/afrotd__parser__tests__rule_2.14.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 14
  - 1
title: Huddle
text: "Huddle ist die Gruppierung von zwei oder mehr Spielern, nachdem der Ball spielbereit ist, und vor dem Snap oder vor einem Free Kick."
interpretations: []
