src/snapshots/afrotd__parser__tests__rule_2.16.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 16
  - 1
title: "Kicken des Balles, legale und illegale Kicks"
text: "\ta) Kicken ist das absichtliche Stoßen des Balles mit dem Knie, dem Schienbein oder dem Fuß.\n\tb) Ein legaler Kick ist ein Punt, Drop Kick oder Place Kick durch einen Team A-Spieler gemäß den Regeln, bevor der Team Ballbesitz wechselt. Kicken des Balles in anderer Weise ist illegal (A.R. 6.1.2.I).\n\tc) Jeder Free- oder Scrimmage Kick bleibt solange ein Kick, bis er dead wird oder von einem Spieler gefangen oder recovert wird.\n\td) Im Zweifel wurde ein Ball eher zufällig berührt als gekickt."
interpretations: []
