src/snapshots/afrotd__parser__tests__rule_2.16.10.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 16
  - 10
title: Scrimmage Kick-Formation
text: "\ta) Eine Scrimmage Kick-Formation ist eine Formation, bei der sich kein Spieler, außer dem potentiellen Kicker (oder Ballhalter), innerhalb des Körperrahmens des Snappers aufgestellt hat und kein Spieler sich im freien Weg vom Snapper zum potentiellen Kicker (oder Ballhalter) befindet, und entweder\n\t\t1. wenigstens ein potentieller Kicker sich 10 oder mehr Meter hinter der neutralen Zone befindet oder\n\t\t2. sich ein potentieller Holder und ein potentieller Kicker sieben oder mehr Meter hinter der neutralen Zone in Position für einen Place Kick befindet. Für 1. oder 2. muss es jeweils offensichtlich sein, dass versucht wird, einen Kick auszuführen, damit von einer Scrimmage Kick-Formation ausgegangen werden kann (A.R. 9.1.14.I bis 9.1.14.III)\n\tb) Wenn sich Team A beim Snap in einer Scrimmage Kick-Formation aufgestellt hat, werden alle Team A-Aktionen während dieses Downs als Aktionen aus einer Scrimmage Kick-Formation angesehen."
interpretations: []
