src/snapshots/afrotd__parser__tests__rule_2.16.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 16
  - 2
title: Punt
text: "Ein Punt ist ein Kick durch einen Spieler, der den Ball fallen lässt und ihn kickt, bevor dieser den Boden berührt."
interpretations: []
