src/snapshots/afrotd__parser__tests__rule_2.16.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 16
  - 3
title: Drop Kick
text: "Ein Drop Kick ist ein Kick durch einen Spieler, der den Ball fallen lässt und ihn kickt, sobald dieser den Boden berührt."
interpretations: []
